Mon Mar  1 21:24:49 1999  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (log_badverf): Actually make a real lookup table
	for procedure numbers.  Also, if we don't find the procedure
	number, just log the number rather than falling off the end of an
	array.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* ovsec_kadmd.c: add calls to a new function
	_svcauth_gssapi_unset_names() to clean up memory when shutting
	down.  Use krb5_overridekeyname instead of krb5_defkeyname, so the
	command line takes precedence over the environment.

Wed Jul 22 00:28:57 1998  Geoffrey King  <gjking@mit.edu>

	* ovsec_kadmd.c (main): Cast gss_nt_krb5_name to
	        gss_OID to avoid compiler warnings.

Tue Jul 21 16:36:51 1998  Geoffrey King  <gjking@mit.edu>

	* ovsec_kadmd.c: Call krb5_klog_reopen in kadm_svc_run
		upon receiving a SIGHUP.  Use sigaction instead of
		signal if POSIX_SIGNALS is defined.  All of the calls
		to signal and sigaction are now in a separate function
		setup_signal_handlers, as the kdc code does.  Also,
		since reset_db no longer does anything, change the name
		of signal_request_reset to the more descriptive
		signal_request_hup, and request_reset_db to 
		request_hup (paralleling the nomenclature in the kdc
		code).

Mon Jul 20 11:28:39 1998  Ezra Peisach  <epeisach@mit.edu>

	* schpw.c (process_chpw_request): Cast to krb5_octet * instead of
	 	char * for krb5_address.contents type.

Fri Feb 27 23:32:38 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the kadmin
 		directory, since we've moved all of the configure.in
		tests to the toplevel kadmin configure.in

Wed Feb 25 14:00:32 1998  Ezra Peisach  <epeisach@mit.edu>

	* schpw.c (process_chpw_request): Free memory of allocated for
	        local address.
